# ChangeLog for dev-php5/pecl-http
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-http/ChangeLog,v 1.4 2007/03/17 23:55:14 chtekk Exp $

*pecl-http-1.5.2 (17 Mar 2007)

  17 Mar 2007; Luca Longinotti <chtekk@gentoo.org> -pecl-http-1.3.1.ebuild,
  +pecl-http-1.5.2.ebuild:
  Version bump.

*pecl-http-1.3.1 (02 Oct 2006)

  02 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -pecl-http-1.2.1.ebuild, +pecl-http-1.3.1.ebuild:
  Version bump.

  17 Sep 2006; Konstantin Arkhipov <voxus@gentoo.org> pecl-http-1.2.1.ebuild:
  Keyworded ~amd64 wrt bug #147529./

*pecl-http-1.2.1 (26 Aug 2006)

  26 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +pecl-http-1.2.1.ebuild:
  Initial ebuild.
